Send a resize message to renderer when exiting full screen in vr.

BUG=678791

Review-Url: https://codereview.chromium.org/2615113002
Cr-Commit-Position: refs/heads/master@{#441808}

Former-commit-id: 2f4dfeb1e88df2f17e746e3f5b56fa54f59e0e15